--- a/pu.pornaboot/src/main/resources/application.properties
+++ b/pu.pornaboot/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8523
+
 porna.starting-directory=/home/purbanus/Videos/vrouwen
+porna.pornafilename=.porna
+
 porna.mail.host=gmail.com
 porna.mail.from=porna.tst@pu.nl
 porna.mail.to=purbanus@gmail.com
