--- a/pu.pornaboot/src/main/resources/application.properties
+++ b/pu.pornaboot/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-server.port=8523
+server.port=8424
 
-porna.starting-directory=/home/purbanus/Videos/vrouwen
-porna.pornafilename=.porna
+### porna.starting-directory=/home/purbanus/Videos/vrouwen
+porna.startingDirectory=/media/purbanus/5TB Seagate/Videos/vrouwen
+porna.pornaFileName=.porna
 
-porna.mail.host=gmail.com
-porna.mail.from=porna.tst@pu.nl
-porna.mail.to=purbanus@gmail.com
-porna.mail.subject=Fout bij porna
+mail.host=gmail.com
+mail.from=porna.tst@pu.nl
+mail.to=purbanus@gmail.com
+mail.subject=Fout bij porna
