Verkorte directorynamen tonen. Dit doen we door een prefix eraf te halen voor display (Directory.getDisplayName()) en die weer toe te voegen als ze als query parameter binnen komen. De huidige prefix is /media/purbanus/5TB Seagate/Videos/.

--- a/pu.pornaboot/src/main/resources/application.properties
+++ b/pu.pornaboot/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=8424
 
 ### porna.starting-directory=/home/purbanus/Videos/vrouwen
 porna.startingDirectory=/media/purbanus/5TB Seagate/Videos/vrouwen
+porna.startingPrefix=/media/purbanus/5TB Seagate/Videos/
 porna.pornaFileName=.porna
 
 mail.host=gmail.com
