File pagina gemaakt

--- a/pu.pornaboot/src/main/resources/application.properties
+++ b/pu.pornaboot/src/main/resources/application.properties
@@ -1,5 +1,22 @@
 server.port=8424
 
+### Tomcat configuratie
+###server.tomcat.basedir=C:/temp/tomcat-deployed/heavymetalboot
+server.tomcat.basedir=/tmp/tomcat-deployed/pornaboot
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
+###server.tomcat.accesslog.directory=logs ###Is de default denkik
+###server.tomcat.accesslog.pattern=common
+logging.level.org.apache.tomcat=INFO
+logging.level.org.apache.catalina=INFO
+###logging.file.path=C:/temp/tomcat-deployed/heavymetalboot
+logging.file.path=/tmp/tomcat-deployed/pornaboot
+server.tomcat.accesslog.suffix=.log
+server.tomcat.accesslog.prefix=access_log
+server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
+
+spring.output.ansi.enabled=ALWAYS
+
 ### porna.starting-directory=/home/purbanus/Videos/vrouwen
 porna.startingDirectory=/media/purbanus/5TB Seagate/Videos/vrouwen
 porna.startingPrefix=/media/purbanus/5TB Seagate/Videos/
