--- a/pu.pornaboot/src/main/resources/application.properties
+++ b/pu.pornaboot/src/main/resources/application.properties
@@ -17,6 +17,8 @@ server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
 
 spring.output.ansi.enabled=ALWAYS
 
+###server.error.whitelabel.enabled=false
+
 ### porna.starting-directory=/home/purbanus/Videos/vrouwen
 porna.startingDirectory=/media/purbanus/5TB Seagate/Videos/vrouwen
 porna.startingPrefix=/media/purbanus/5TB Seagate/Videos/
