Files en directories en properties ophalen uit de database. Alle aanpassingen gedaan en de tests werken. Nu nog het initieel vullen van de database

--- a/pu.pornaboot/src/main/resources/application.properties
+++ b/pu.pornaboot/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 server.port=8424
 
 ### Tomcat configuratie
-###server.tomcat.basedir=C:/temp/tomcat-deployed/heavymetalboot
 server.tomcat.basedir=/tmp/tomcat-deployed/pornaboot
 server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
@@ -16,8 +15,42 @@ server.tomcat.accesslog.prefix=access_log
 server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
 
 spring.output.ansi.enabled=ALWAYS
-
 ###server.error.whitelabel.enabled=false
+
+### Dit kan de volgende waardes hebben:
+### create drop existing tables, then create them
+### create-drop create the schema before runs and drop it afterwards
+### update like create, but it only updates columns, it never deletes tables or columns
+### validate validates whether the tables and columns exist, otherwise it throws an exception
+### none Turns off ddl generation 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/porna
+spring.datasource.username=porna
+spring.datasource.password=Pannekoek33
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+### Dit heb je nodig als je een data.sql script hebt bij Hibernate
+### spring.jpa.defer-datasource-initialization=true
+
+### Show the sql statements in the log
+### hibernate.format_sql: pretty print the sql
+### Dit wordt echter AFGERADEN want het print alles naar STDOUT 
+### spring.jpa.show-sql=true
+### spring.jpa.properties.hibernate.format_sql=true
+
+### Dit logt de sql, zelfs pretty en de parameters
+### logging.level.org.hibernate.SQL=DEBUG
+### logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+### Bij beide krijg je een CONDITIONS EVALUATION REPORT waar je volgens mij niets aan hebt.
+### debug=true
+### logging.level.org.springframework.boot.autoconfigure=DEBUG
+
+### Dit maakt een anti-pattern ongedaan
+spring.jpa.open-in-view=false
+
+### Logging. DIT OVERRIDET logback.xml settings!!
+### logging.level.root=DEBUG
+
 
 ### porna.starting-directory=/home/purbanus/Videos/vrouwen
 porna.startingDirectory=/media/purbanus/5TB Seagate/Videos/vrouwen
